# FlashRT

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  USAGE.md  pyproject.toml  setup.py
.github/: CODEOWNERS
csrc/: bindings.cpp  context.h  fa2_bindings.cpp  fp4_bindings.cpp
csrc/attention/: fa2_wrapper.cu  fa2_wrapper_causal.cu  fmha_dispatch.cu  fmha_dispatch.h  fmha_fp16_strided.cu
csrc/attention/collective/: sm100_fmha_fwd_mainloop_tma_warpspecialized.hpp
csrc/attention/fa2_causal_inst/: flash_fwd_hdim128_bf16_sm80_causal.cu  flash_fwd_split_hdim128_bf16_sm80_causal.cu
csrc/attention/flash_attn_2_src/: VENDOR.md
csrc/attention/kernel/: sm100_fmha_fwd_kernel_tma_warpspecialized.hpp
csrc/fused_fp16/: rms_norm_noweight_fp16.cu  rms_norm_noweight_fp16.cuh
csrc/fused_fp4/: norm_silu_fp4_sfa.cu  norm_silu_fp4_sfa.cuh  per_channel_mul_fp16.cu  res_rms_fp4_sfa_v2.cu  res_rms_mul_fp4_sfa.cu  silu_mul_fp4_sfa_v2.cu  silu_mul_mul_fp4_sfa_v2.cu  silu_mul_two_fp4_to_fp4.cu  silu_mul_two_fp4_to_fp4.cuh  test_silu_mul_two_standalone.cu
csrc/gemm/: cublaslt_fp8.cuh  cutlass_preinit.cuh  cutlass_sm100.cu  gemm_kernels.cu  gemm_runner.cu  gemm_runner.h  gemm_types.h  gemm_types_sm100.h
csrc/gemm/fp4/: cutlass_fp4_gemm.cu  cutlass_fp4_gemm.cuh  cutlass_fp4_gemm_fp4out.cu  cutlass_fp4_gemm_fp4out.cuh  cutlass_fp4_gemm_silu_aux.cu  cutlass_fp4_gemm_silu_aux.cuh  cutlass_fp4_gemm_variants.cu  test_fp4_standalone.cu  test_fp4out_standalone.cu  test_silu_aux_standalone.cu
csrc/kernels/: activation.cu  activation.cuh  attention_cublas.cu  attention_cublas.cuh  attention_dit_bf16.cu  attention_mha.cu  attention_mha_causal.cu  common.cuh  decoder_fused.cu  decoder_fused.cuh  dit_bf16.cu  elementwise.cu  elementwise.cuh  fp4_w4a4_matvec_sm120.cu  fp4_w4a4_matvec_sm120.cuh  fp4_w4a4_mma_sm120.cu  fp4_w4a4_mma_sm120.cuh  fusion.cu  fusion.cuh  kernels.h  norm.cu  norm.cuh  patch_embed.cu  patch_embed.cuh  quantize.cu  quantize.cuh  qwen3_qkv_post_proc.cu  qwen3_qkv_post_proc.cuh  rope.cu  rope.cuh  rope_qwen3.cu  silu_mul_to_nvfp4_swizzled.cu  silu_mul_to_nvfp4_swizzled.cuh  softmax.cu  softmax.cuh
csrc/legacy/: patch_embed_api.cu  quantize_fp8_api.cu
csrc/quantize/: quantize_fp4_dynamic.cu  quantize_fp4_dynamic.cuh  quantize_fp4_sfa.cu  quantize_fp4_sfa.cuh  reshape_scales_sfa.cu  reshape_scales_sfa.cuh  test_quantize_fp4_standalone.cu
csrc/training/jax_ffi/: activation_quantize_ffi.cu  (+1 more)
docker/: Dockerfile.thor  README.md
docs/: INSTALL.md  adding_new_model.md  architecture.md  calibration.md  cfg_correctness_spec.md  deployment_rtx4090.md  inference_engine_differences.md  kernel_catalog.md  kernel_fusion.md  optimization-details.md  plugin_model_template.md  precision_spec.md  qwen36_usage.md  qwen3_8b_nvfp4.md  rl_inference.md  stable_api.md
docs/extension/: attention_backend.md  calibration.md  weight_spec.md
examples/: README.md  convert_pi0fast_orbax_to_safetensors.py  quickstart.py  qwen36_openai_server.py  qwen3_openai_server.py  server.py
examples/blackwell/: README.md  eval_libero.py
examples/thor/: README.md  eval_libero.py
flash_rt/: api.py
flash_rt/core/: cuda_buffer.py  thor_frontend_utils.py
flash_rt/utils/: __init__.py  paligemma_tokenizer.py
flash_vla/: __init__.py  api.py
flash_vla/configs/: groot.yaml  groot_n17.yaml  pi0.yaml  pi05.yaml
flash_vla/core/: calibration.py  calibration_api.py  config.py  context.py  cuda_buffer.py  cuda_graph.py  precision_spec.py  thor_frontend_utils.py
flash_vla/datasets/: __init__.py  libero.py
flash_vla/executors/: __init__.py  fp4_utils.py  fp4_utils_cb.py  jax_weights.py  torch_weights.py  weight_loader.py
flash_vla/frontends/: __init__.py
flash_vla/hardware/: __init__.py  backend.py
flash_vla/models/: __init__.py
flash_vla/refs/: __init__.py  pi05_cfg_reference.py
flash_wm/csrc/: CMakeLists.txt  bagel_res_rms_fp4_sfa_bf16.cu  bagel_silu_mul_fp4_sfa.cu  bindings.cpp  ckernel_bagel.py  ckernel_bagel_fp4.py  ckernel_bagel_fp4_batched.py  cutlass_fp4_gemm_bf16out.cu  cutlass_fp8_fmha.cu  cutlass_fp8_sq_bias_bf16out.cu  kernels_bf16.cu
flash_wm/src/: bagel_fp4_calibrate.py  bagel_fp4_weights.py  bagel_fp8_engine.py
scripts/: download_paligemma_tokenizer.sh
tests/: _groot_n17_runner.py  bench_p1_quickstart.py  bench_pi05_thor_views.py  bench_thor_calibration_vs_ref.py  eval_libero_fp4.py  profile_fp4_awq_audit.py  profile_fp4_vs_fp8_layer.py  test_all_models_precision.py  test_calibration_helpers.py  test_cfg_correctness_oracle.py  test_dataset_calibration_rtx.py  test_fp4_ab_normal.py  test_fp4_canary.py  test_fp4_integration_meta.py  test_groot_calibrate_rtx.py  test_groot_n17_attn_backend.py  test_groot_n17_calibration.py  test_groot_n17_e2e.py  test_groot_n17_latency.py  test_groot_n17_precision.py  test_groot_n17_weight_loader.py  test_load_model_use_fp8_kwarg.py  test_norm_stats_adapter.py  test_p1_split_gu.py  test_p8_awq_inplace.py  test_pi05_batched_inference.py  test_pi05_batched_precision.py  test_pi05_cfg_batched_inference.py  test_pi0fast_precision.py  test_precision_spec.py  test_qwen36_nvfp4_graph_cache_bound.py  test_qwen36_nvfp4_long_ctx_auto_route.py  test_rl_cfg_inference.py  test_rl_primitives.py  test_thor_attn_backend.py  test_thor_calibrate_matrix.py  test_thor_groot_attn_backend.py  test_thor_groot_calibrate.py  test_thor_groot_n17_calibrate.py  test_thor_multi_sample_calibrate.py  (+3 more)
tests/_helpers/: validate_lerobot_norm_stats.py
tests/fixtures/: cfg_reference_outputs.npz
tools/: generate_cfg_oracle_fixtures.py
training/: README.md
training/_runs/: run_jax_compare.py
training/jax/: README.md  __init__.py  checkpoint.py  merge_lora.py
training/lora/: fp8_autograd.py  fp8_linear.py  inject.py
training/rl/: acp_hook.py  async_loader.py  checkpoint.py  dataset_protocol.py  dataset_stats.py  jax_baseline_compare.py  lerobot_libero.py  merge_lora.py  observation.py  pi05_vf.py  recap_iter.py  tokenizer.py  train_libero_recap.py  train_policy.py  train_recap.py  train_value.py  value_infer.py
training/trainers/: pi05_torch_trainer.py
(+130 files in other folders)
